# pypi_hello_world

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  test_hello.py
.github/workflows/: publish-to-pypi.yml
entimaniac_hello_world/: __init__.py
pypi_hello_world/: hello.py
